# automata_life_simulation

./: README.md  pyproject.toml
src/: __main__.py
src/automata/: __init__.py  event_queue.py  person_state.py  state.py
