[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Petro Mozil", email = "mozil.petryk@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "BSD 3-clause"}

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.0.0",
    "black>=23.3.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = ".pyi?$"
exclude = """
(
  .toml
  |.sh
  |.git
  |.ini
)
"""
